# variants

./: README.md
base/: CMakeLists.txt  package.xml
core/: CMakeLists.txt  package.xml
desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
desktop_full/: CHANGELOG.rst  CMakeLists.txt  package.xml
dev/: CMakeLists.txt  package.xml
dev_tools/: CMakeLists.txt  package.xml
perception/: CHANGELOG.rst  CMakeLists.txt  package.xml
quickstart/: CMakeLists.txt  package.xml
ros_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_desktop/: CMakeLists.txt  package.xml
simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
