<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>desktop_full</name>
  <version>0.10.0</version>
  <description>Provides a "batteries included" experience to novice users.</description>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>desktop</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>simulation</exec_depend>
  <exec_depend>ros_ign_gazebo_demos</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
