<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dev</name>
  <version>0.10.0</version>
  <description>A "meta-package" that has many of the tools needed for developing and compiling ROS code.</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dev Tools -->
  <exec_depend>python3-colcon-common-extensions</exec_depend>
  <exec_depend>python3-flake8</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-pytest</exec_depend>
  <exec_depend>python3-pytest-cov</exec_depend>
  <exec_depend>python3-rosdep</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <exec_depend>python3-vcstool</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
