<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>perception</name>
  <version>0.10.0</version>
  <description>A package which aggregates common perception packages.</description>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_base</exec_depend>

  <exec_depend>image_common</exec_depend>
  <exec_depend>image_pipeline</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>

  <!-- No laser_pipeline on ROS 2 yet, break it up -->
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

  <exec_depend>perception_pcl</exec_depend>
  <exec_depend>vision_opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
