<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_base</name>
  <version>0.5.0</version>
  <description>A package which extends 'ros_core' and includes other basic functionalities like commend line tools, tf2 as well as some basic demos/examples.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_core</exec_depend>

  <exec_depend>common_interfaces</exec_depend>
  <exec_depend>composition</exec_depend>
  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>demo_nodes_cpp_native</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>
  <exec_depend>examples_rclcpp_minimal_client</exec_depend>
  <exec_depend>examples_rclcpp_minimal_composition</exec_depend>
  <exec_depend>examples_rclcpp_minimal_publisher</exec_depend>
  <exec_depend>examples_rclcpp_minimal_service</exec_depend>
  <exec_depend>examples_rclcpp_minimal_subscriber</exec_depend>
  <exec_depend>examples_rclcpp_minimal_timer</exec_depend>
  <exec_depend>examples_rclpy_executors</exec_depend>
  <exec_depend>examples_rclpy_minimal_client</exec_depend>
  <exec_depend>examples_rclpy_minimal_publisher</exec_depend>
  <exec_depend>examples_rclpy_minimal_service</exec_depend>
  <exec_depend>examples_rclpy_minimal_subscriber</exec_depend>
  <exec_depend>lifecycle</exec_depend>
  <exec_depend>logging_demo</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>ros2msg</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2pkg</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2srv</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>sros2</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tlsf</exec_depend>
  <exec_depend>tlsf_cpp</exec_depend>
  <exec_depend>topic_monitor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
