<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_base</name>
  <version>0.10.0</version>
  <description>A package which extends 'ros_core' and includes other basic functionalities like tf2 and urdf.</description>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_core</exec_depend>

  <!-- rosbag2 repo -->
  <exec_depend>rosbag2</exec_depend>
  
  <!-- geometry2 repo -->
  <exec_depend>geometry2</exec_depend>

  <!-- kdl_parser repo -->
  <exec_depend>kdl_parser</exec_depend>

  <!-- urdf repo -->
  <exec_depend>urdf</exec_depend>

  <!-- robot_state_publisher repo -->
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
