<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>simulation</name>
  <version>0.9.3</version>
  <description>A package which extends 'desktop' and includes simulation packages.</description>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>desktop</exec_depend>

  <exec_depend>ros_ign</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
