<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>simulation</name>
  <version>0.10.0</version>
  <description>A package which extends 'ros_base' and includes simulation packages.</description>

  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>Apache License 2.0</license>

  <author email="louise@openrobotics.org">Louise Poubel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_base</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
